# EQClassic

./: .gitignore  CMakeLists.txt  flake.nix
Common/Include/: GuildDatabase.h  config.h  database.h  timer.h
Common/Source/: Item.cpp  Logger.cpp  MiscFunctions.cpp  OSInfo.cpp  database.cpp
EQC/Sources/: EQCUtils.cpp
LS/Login/: EQCrypto.cpp  EQCrypto.h  LWorld.cpp  LWorld.h  net.cpp
LS/Login/DES_CBC/: README.md
LS/common/: EMuShareMem.cpp  EMuShareMem.h  EQNetwork.cpp  EQNetwork.h  TCPConnection.cpp  TCPConnection.h  crc32.cpp  dbasync.cpp  debug.cpp  eqtime.cpp  packet_dump_file.cpp
LS/zone/: Map.cpp  MobAI.cpp  Object.cpp  PlayerCorpse.cpp  WesQuests.cpp  attack.cpp  client.cpp  client_process.cpp  doors.cpp  entity.cpp  faction.cpp  forage.cpp  import_raw_items.cpp  loottables.cpp  net.cpp  npc.cpp  parser.cpp  spawngroup.cpp  worldserver.cpp  zone.cpp  zonedbasync.cpp
SharedMemory/Include/: SharedMemory.hpp
SharedMemory/Source/: DLLMain.cpp  SharedMemory.cpp  SharedMemoryItems.cpp
Utils/perlxs/: client.h.xs  entity.h.xs  mob.h.xs  npc.h.xs  perlpacket.h.xs  questmgr.h.xs
Zone/Include/: ZoneGuildManager.h  faction.h
Zone/Source/: EntityList.cpp  embparser.cpp  embperl.cpp  perl_client.cpp  perl_entity.cpp  perl_mob.cpp  perl_npc.cpp  perl_perlpacket.cpp  perlpacket.cpp  questmgr.cpp  spawn2.cpp
